--- a/src/views/room.pug
+++ b/src/views/room.pug
@@ -4,7 +4,8 @@ block content
     div#room_container
         header.room_header 
             span.exit_button 
-                i.fa-solid.fa-arrow-left
+                i.fa-solid.fa-chevron-left
+                | 나가기                
             div.word_container 
                 p 상대방의 금칙어
                 span.forbidden_word
