style: 전반적인 스타일 수정
- 모바일 환경에서의 레이아웃 배경 색상 변경
- 메인 페이지 이미지 크기 변경
- 메인 페이지 시작 버튼 border-radius 수정
- 상대방의 금칙어가 나타났을 때와 나타나지 않을 때의 room 헤더 높이의 일관성을 위해 고정 높이값 추가
- tipModal 제목란에 이모지 추가

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -42,6 +42,12 @@ body {
   transition: background-color 0.5s ease;
 }
 
+@media screen and (max-width: 767px) {
+  body {
+    background-color: var(--primary-bg-color);
+  }
+}
+
 main#layout {
   display: flex;
   max-width: 32rem;
